--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \documentclass[twoside, final]{hcmut_report}
-\usepackage{codespace}
+% \usepackage{codespace}
 % Configuration
 \upperuniname{ĐẠI HỌC QUỐC GIA THÀNH PHỐ HỒ CHÍ MINH}
 \uniname{TRƯỜNG ĐẠI HỌC BÁCH KHOA}
