--- a/template/main.tex
+++ b/template/main.tex
@@ -35,6 +35,7 @@ Cách xuống dòng
 bằng double enter
 \section{Kiểu liệt kê}
 \subsection{dấu chấm}
+\subsubsection{con cua tieu de dau cham}
 
 \begin{itemize}
     \item a 
@@ -50,10 +51,17 @@ bằng double enter
 \end{enumerate}
 
 \section{Công thức toán}
-$a^2+b^2=c^2$
+textblabla $a^2+b^2=c^2$
 $$a^2+b^2=c^2$$
 
+\newpage
+
 \section{Chèn hình}
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=1\textwidth]{graphics/f5.PNG}
+    
+\end{figure}
 \begin{figure}[!htbp]
     \centering
     \includegraphics[width=0.7\textwidth]{graphics/f5.PNG}
