--- a/template/main.tex
+++ b/template/main.tex
@@ -60,7 +60,6 @@ $$a^2+b^2=c^2$$
 \begin{figure}[!htbp]
     \centering
     \includegraphics[width=1\textwidth]{graphics/f5.PNG}
-    
 \end{figure}
 \begin{figure}[!htbp]
     \centering
@@ -73,4 +72,9 @@ $$a^2+b^2=c^2$$
     assump_data <- data.frame(Max_Power_Value = 225, Memory_Value = 8190, Memory_Bandwidth_Value = 70)
     predict(mo.hinh.3, assump_data, interval = "confidence")
 \end{lstlisting}
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=0.7\textwidth]{graphics/thu_thoi.png}
+    \caption{Ảnh chụp màn hình}
+\end{figure}
 \end{document}
