Thêm bảng phân công

--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,7 @@
 
 \coursename{XÁC SUẤT VÀ THỐNG KÊ}
 \reporttype{BÁO CÁO BÀI TẬP LỚN}
-\title{PHÂN TÍCH BỘ DỮ LIỆU VỀ SẢN PHẨM CỦA CỬA HÀNG ĐIỆN TỬ ONLINE}
+\title{PHÂN TÍCH BỘ DỮ LIỆU VỀ SẢN PHẨM CỦA CỬA HÀNG ĐIỆN TỬ TRỰC TUYẾN}
 \advisor{
     TS. Phan Thị Hường
 }
@@ -23,11 +23,38 @@
 \begin{document}
 \begin{titlepage}
     \coverpage
+    \newpage
+    \begin{center}
+        \small \bfseries 
+        BÁO CÁO PHÂN CÔNG NHIỆM VỤ VÀ KẾT QUẢ THỰC HIỆN ĐỀ TÀI         
+        
+        NHÓM: 10 -- LỚP: TN01 -- HỌC KỲ: 241 -- MÔN: XÁC SUẤT VÀ THỐNG KÊ (CH2013)    
+    \renewcommand{\arraystretch}{1.2}
+    \begin{table}[h!]
+        \centering
+        \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|c|l|c|l|c|c|}
+            \hline
+            \textbf{STT} & \textbf{Họ và tên}         & \textbf{MSSV}   & \textbf{Nhiệm vụ}                             & \textbf{Đóng góp} & \textbf{Điểm chia $\pm 2$} \\ \hline
+            1            & Trần Điền Minh            & 2312116         & Hồi quy đa bội                                 & 100 \% & 0 \\ \hline
+            2            & Phan Thanh Sơn            & 2312975         & \makecell[l]{Kiểm định hai mẫu \\ \& một mẫu}  & 100 \% & 0 \\ \hline
+            3            & Nguyễn Hoàng Anh Thắng    & 2313185         & Anova hai nhân tố                              & 100 \% & 0 \\ \hline
+            4            & Huỳnh Văn Lợi             & 2311974         & Anova một nhân tố                              & 100 \% & 0 \\ \hline
+            5            & Cao Chí Nguyên            & 2312331         & Thực hiện thống kê mô tả                       & 100 \% & 0 \\ \hline
+            6            & Nguyễn Hữu Thịnh          & 2313292         & Thực hiện tiền xử lí số liệu                   & 100 \% & 0 \\ \hline
+        \end{tabular}
+        }        
+    \end{table}
+\end{center}
+    \newpage
+    \tableofcontents
 \end{titlepage}
+
 \newpage
+
 \setcounter{page}{1}
 \pagestyle{empty}
-\tableofcontents
+
 \pagestyle{fancy}
 \pagebreak
 \input{content/1_Tong_quan_du_lieu.tex}
