--- a/content/2_Co_so_ly_thuyet.tex
+++ b/content/2_Co_so_ly_thuyet.tex
@@ -1,1 +1,5 @@
-\section{Cơ sở lý thuyết}
+\section{Kiến thức nền}
+\subsection{Thống kê mô tả}
+Phương pháp thống kê mô tả (descriptive statistics) là một phương pháp trong khoa học thống kê được sử dụng để mô tả và tóm tắt các dữ liệu một cách đơn giản và dễ hiểu. Phương pháp này giúp chúng ta hiểu thông tin cơ bản về các biến trong dữ liệu mà không cần đưa ra các phán đoán hay suy luận về mối quan hệ giữa các biến. Các phương pháp thống kê mô tả thường bao gồm các đại lượng thống kê như \textbf{giá trị trung bình, phương sai, độ lệch chuẩn, phân vị, tỉ lệ phần trăm, đồ thị và biểu đồ}. Các đại lượng này giúp chúng ta hiểu về trung tâm, phân tán và hình dạng của dữ liệu.
+\subsection{Thống kê suy diễn}
+\subsubsection{}
