--- a/content/1_Tong_quan_du_lieu.tex
+++ b/content/1_Tong_quan_du_lieu.tex
@@ -19,7 +19,7 @@ Dữ liệu dưới đây được thu thập và tổ chức nhằm mục đíc
 Các biến được phân loại như sau:
 \begin{itemize}
     \item \textbf{Biến định tính:} order\_id, customer\_id, nearest\_warehouse.
-    \item \textbf{Biến thời gian:} date, deason.
+    \item \textbf{Biến thời gian:} date, season.
     \item \textbf{Biến danh sách:} shopping\_cart.
     \item \textbf{Biến định lượng:} order\_price, delivery\_charges, customer\_lat, customer\_long,\\coupon\_discount, order\_total, distance\_to\_nearest\_warehouse.
     \item \textbf{Biến nhị phân:} is\_expedited\_delivery, is\_happy\_customer.
