--- a/content/3_Tien_xu_ly_so_lieu.tex
+++ b/content/3_Tien_xu_ly_so_lieu.tex
@@ -1,2 +1,4 @@
 \section{Tiền xử lý số liệu}
-Xử lý một số biến bị khuyết
+\subsection{Đọc dữ liệu}
+Để đọc dữ liệu từ tệp tin dirty\_data.csv, ta sử dụng lệnh \textbf{read.csv()} với input là đường dẫn đến tệp tin chứa dữ liệu cần phân tích. Sau đó, ta sử dụng lệnh \textbf{dim()} để hiển thị số hàng \& số cột cùng với lệnh \textbf{names()} để liệt kê các tên biến có trong dữ liệu. Kết quả có được như trong 
+
